--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 
 
-  <script type="module" src="scripts/game.js" async></script>
+  <script type="module" src="scripts/main.js" async></script>
 
 </body>
 
